[gd_scene load_steps=19 format=3 uid="uid://da2qqf6s3w653"]

[ext_resource type="Script" path="res://Scripts/settings.gd" id="1_cqx32"]
[ext_resource type="Texture2D" uid="uid://ckx2ojejalt5n" path="res://Assets/UI/Blank_Page_Darkmode.png" id="1_s14fh"]
[ext_resource type="Texture2D" uid="uid://c6wr47i7kcrfu" path="res://Assets/UI/Dialog_Box.png" id="2_rpimm"]
[ext_resource type="FontFile" uid="uid://p5ky1dctfe4y" path="res://Assets/Fonts/SedanSC-Regular.ttf" id="3_wmwyd"]
[ext_resource type="Texture2D" uid="uid://bmk8oshxowy1i" path="res://Assets/UI/Button.png" id="5_lvtjv"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_22hjs"]
texture = ExtResource("1_s14fh")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2pcm7"]
texture = ExtResource("2_rpimm")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sj7j4"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_p07pg"]
texture = ExtResource("5_lvtjv")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qls5v"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6i3sg"]
texture = ExtResource("5_lvtjv")
modulate_color = Color(0.294118, 0.294118, 0.294118, 0.760784)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8ybpb"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6huf4"]
texture = ExtResource("5_lvtjv")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j1iri"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rqdr3"]
texture = ExtResource("5_lvtjv")
modulate_color = Color(0.294118, 0.294118, 0.294118, 0.760784)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4qk0h"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hi6ac"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6ul0o"]

[node name="Settings" type="CanvasLayer"]
script = ExtResource("1_cqx32")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_22hjs")

[node name="Panel" type="Panel" parent="Panel"]
custom_minimum_size = Vector2(600, 600)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -300.0
offset_right = 300.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_2pcm7")

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 216.0
offset_top = 256.0
offset_right = 515.0
offset_bottom = 328.0
theme_override_fonts/font = ExtResource("3_wmwyd")
theme_override_font_sizes/font_size = 60
text = "SETTINGS"

[node name="Label2" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 216.0
offset_top = 368.0
offset_right = 515.0
offset_bottom = 440.0
theme_override_fonts/font = ExtResource("3_wmwyd")
theme_override_font_sizes/font_size = 30
text = "USERNAME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="Panel/Label2"]
layout_mode = 0
offset_left = -80.0
offset_top = 88.0
offset_right = 392.0
offset_bottom = 119.0
theme_override_fonts/font = ExtResource("3_wmwyd")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_sj7j4")
alignment = 1
max_length = 20

[node name="Cancel_But" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 299.0
offset_top = 712.0
offset_right = 453.0
offset_bottom = 772.0
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxTexture_p07pg")
theme_override_styles/hover = SubResource("StyleBoxEmpty_qls5v")
theme_override_styles/pressed = SubResource("StyleBoxTexture_6i3sg")
theme_override_styles/focus = SubResource("StyleBoxEmpty_8ybpb")
text = "CANCEL"

[node name="Add_But" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 476.0
offset_top = 712.0
offset_right = 630.0
offset_bottom = 772.0
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxTexture_6huf4")
theme_override_styles/hover = SubResource("StyleBoxEmpty_j1iri")
theme_override_styles/pressed = SubResource("StyleBoxTexture_rqdr3")
theme_override_styles/focus = SubResource("StyleBoxEmpty_4qk0h")
disabled = true
text = "SAVE"

[node name="CheckBox" type="CheckBox" parent="."]
offset_left = 128.0
offset_top = 548.0
offset_right = 368.0
offset_bottom = 599.0
theme_override_fonts/font = ExtResource("3_wmwyd")
theme_override_font_sizes/font_size = 35
theme_override_styles/hover = SubResource("StyleBoxEmpty_hi6ac")
theme_override_styles/focus = SubResource("StyleBoxEmpty_6ul0o")
text = "DARKMODE"

[node name="Label" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -376.0
offset_right = 84.0
offset_bottom = -353.0
grow_horizontal = 2
grow_vertical = 0
text = "Label Life Ver 1.0"

[connection signal="text_changed" from="Panel/Label2/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="pressed" from="Panel/Cancel_But" to="." method="_on_cancel_but_pressed"]
[connection signal="pressed" from="Panel/Add_But" to="." method="_on_add_but_pressed"]
[connection signal="toggled" from="CheckBox" to="." method="_on_check_box_toggled"]
